[gd_scene load_steps=3 format=3 uid="uid://vpe7nrsqe22f"]

[ext_resource type="Script" path="res://04.creating-an-online-chat/ChatClient.gd" id="1_riv0f"]
[ext_resource type="PackedScene" uid="uid://d01k17u387ahf" path="res://04.creating-an-online-chat/ChatControl.tscn" id="2_ef2pw"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_riv0f")

[node name="AvatarCardsScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -368.0
offset_top = -154.0
offset_right = 368.0
offset_bottom = 154.0
grow_horizontal = 2
grow_vertical = 2

[node name="AvatarCardsHBoxContainer" type="HBoxContainer" parent="AvatarCardsScrollContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="ChatControl" parent="." instance=ExtResource("2_ef2pw")]
layout_mode = 1
